fix overflow bug that would allow scrolling off screen to the right

--- a/src/app/canvas-components/canvas-container/canvas-container.component.scss
+++ b/src/app/canvas-components/canvas-container/canvas-container.component.scss
@@ -3,9 +3,11 @@
 section.canvas-container-component {
   bottom: 0;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 60px;
+  width: 100%;
 
   > div {
     position: absolute;
